[package]
name = "pw-connections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive", "wrap_help", "unicode"] }
libspa = "0.5.0"
pipewire = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_yaml = "0.9.13"
thiserror = "1.0.37"
